--- a/css/styles.css
+++ b/css/styles.css
@@ -229,12 +229,14 @@ main {
     background-color:#fdc7cc;
 }
 
-::-webkit-scrollbar-corner {
-    background-color: black;
-}
-
 ::-webkit-scrollbar-thumb {
-    background-color: #F7B1B8;
+    background-color:#F7B1B8;
+    border-radius: 100px;
+} 
+
+::-webkit-scrollbar-thumb:hover {
+    background-color:#fa959f;
+    border-radius: 60px;
 } 
 
 footer {
